--- a/Book Highlights/0. Trivia.md
+++ b/Book Highlights/0. Trivia.md
@@ -2,14 +2,13 @@
 
 -	**Make**	: 	builds executable programs
 
--	**XSLT**	: 	(Extensible Stylesheet Language Transformations) transforms XML documents into other XML documents
+-	**XSLT**	: 	"Extensible Stylesheet Language Transformations", transforms XML documents into other XML documents
 
 -	**Inform**	:	based on English language, supports creating interactive text-based fiction.
 
-
 -	**YAML**	:	a human readable data serialization language. minimal and concise.
 
--	**ANTLR**	:	another tool for language recognition. takes input grammar, outputs language recognizer code in many programming languages.
+-	**ANTLR**	:	"Another tool for language recognition", takes input grammar, outputs language recognizer code in many programming languages.
 
 -	**CFML**	:	a scripting language for web development that augments HTML with database_commands/functions/conditional operators.
 
@@ -18,30 +17,22 @@ SWIG is typically used to parse C/C++ interfaces and generate the 'glue code' re
 
 -	**IDL**	:	Interactive data language, used for data analysis, particularly in astronomy, atmosphere physics and medical imaging.
 Fast at vector operations, dynamically typed and uses passing by reference almost all the time.
-
-
--	**Dart**	:	Another ALGOL programming language, developed by google. Usually compiled to JavaScript.
-
+  
+-	**Dart**	:	Another general purpose PL developed by google. Usually compiled to JavaScript.
 
 -	**Jinja2**	:	A web template engine for Python, similar to Django. Has python code written within HTML.
-
 
 -	**CSS**	:	Cascading style sheets, describes the presentation of a document written in markup language(HTML).
 cornerstone to the Web, alongside HTML and JavaScript.
 
-
 -	**SCSS**	:	Sassy CSS, or sass. Interpreted or compiled into CSS.
-
 
 -	**Markdown**:	A light-weight markup language for creating formatted text in a plain text editor.
 
-
 -	**Emacs Lisp**:	A dialect of LISP, it is used as a scripting language by the EMACS text editors. 
-
 
 -	**INI**	:	A configuration file extension for computer software, it consists of key-value pairs.
 Popularized by MSDOS.
-
 
 - **JSON** : "JavaScript object notation", a standard file format and data exchange format, that stores data objects as attribute-value pairs // array data types, and is human and machine readable.
   
@@ -50,23 +41,39 @@ Popularized by MSDOS.
 - **Lex** 		: A computer program that generates lexical analyzers. It reads an input stream specifying the lexical analyzer, and outputs the code that actually does the analysis.
 
 - **Sed**			: "Stream editor" a Unix utility that parses and transforms text using a simple language.
-Uses a regex input, it can filter/replace string patterns in a line-by-lone basis.  
-
+Uses a regex input, it can filter/replace string patterns on a line-by-line basis.  
 
 - **Bash**		: A unix shell and command line language written for the GNU project, used by default for most Linux distributions.  
 It typically runs in a text window, where user types in commands, or it can read and execute commands from a file.
  
- - **Batch**	: A scripting file that contains a series of Windows commands, alongside branching/looping logic.
+- **Batch**	: A scripting file that contains a series of Windows commands, alongside branching/looping logic.
 
 - **Mustache** : A web template system, available for many programming languages, and used for web and mobile applications.  
 It is logic-less, and all the control is driven by data.  
 
+- **AWK**		: A data-driven scripting language, designed for test processing (like Sed and Grep), and typically used for data extraction and reporting, and is a standard part of Unix-like operating systems.  
 
+- **HTML**	: "Hyper-text markup language", the standard markup language for documents designed to be displayed on the WEB. It can be assisted by CSS (which defines the layout) and JavaScript (whose content can be embedded within an HTML document, and affects its behavior and content).  
+Browsers receive an HTML document, that describes the structure of a web page, and render them for display.
+
+- **Scsh** 	: "Scheme shell", a portable operating system interface, layered on scheme (a dialect of LISP). Mostly outdated.
+
+- **XML** 	: "Extensible Markup language", a language for encoding documents in a human and machine readable format. Widely used for representing arbitrary data structures on the internet.  
+
+- **YACC**	: "Yet another compiler-compiler" A look ahead left-to-right parser generator, that generates a parser based on the formal grammar.
+
+- 
 
 # General-purpose Programming Languages
 
 -	**COBOL** :	“common business-oriented language”, a compiled, imperative English-like PL designed for business use.
 created in 1959 by Mrs. Grace Hopper, it is a mostly retired language.  
+
+- **LISP**: 
+
+- **Lua**:
+
+- **Go**:  
 
 
 # Other Trivia
@@ -116,6 +123,7 @@ and
 	-- Transforms into --  
 >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; t1 := 0                ; initialize i  
 L1:  if t1 >= 10 goto L2  conditional jump  
+
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;t2 := t1 * t1          ; square of i  
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;t3 := t1 * 4           ; word-align address  
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;t4 := b + t3           ; address to store i*i  
